--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,15 +1,15 @@
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 587ab0fe8479343c8ddbb348c48411b8) *)
+(* DO NOT EDIT (digest: 1dae45224ca27c137dfeb30c7707420a) *)
 This is the INSTALL file for the core_bench distribution.
 
 This package uses OASIS to generate its build system. See section OASIS for
-full information.
+full information. 
 
 Dependencies
 ============
 
 In order to compile this package, you will need:
-* ocaml (>= 4.00.0) for all, doc core_bench
+* ocaml (>= 4.00.0)
 * findlib (>= 1.3.2)
 * core for library core_bench, executable test_bench
 * sexplib
